package com.mouse.bet.cache;

public class ArbCache {
}
