package com.mouse.bet.cache;

public class FailedBetStore {
}
