package com.mouse.bet.logservice;

public class MetricService {
}
